# neurophone

./: .gitignore  0-AI-MANIFEST.a2ml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.adoc  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  STATE.scm  TEST-NEEDS.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  TOPOLOGY.md  flake.nix  guix.scm  justfile  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.clusterfuzzlite/: Dockerfile  project.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: boj-build.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  ethicalcheck.yml  greetings.yml  guix-nix-policy.yml  hypatia-scan.yml  instant-sync.yml  jekyll-gh-pages.yml  label.yml  language-policy.yml  mirror.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  rust.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  stale.yml  wellknown-enforcement.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.migration/: JAVA_TO_RUST.md
.well-known/: security.txt
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ai/neurophone/: MainActivity.kt  NativeLib.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
config/: default.toml
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/claude-client/: Cargo.toml
crates/claude-client/src/: lib.rs
crates/esn/: Cargo.toml
crates/esn/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/lsm/: Cargo.toml
crates/lsm/benches/: lsm_bench.rs
crates/lsm/src/: lib.rs
crates/neurophone-android/: Cargo.toml
crates/neurophone-android/src/: lib.rs
crates/neurophone-core/: Cargo.toml
crates/neurophone-core/benches/: neurophone_bench.rs
crates/neurophone-core/src/: lib.rs
crates/neurophone-core/tests/: property_test.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: lib.rs
docs/: AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc
docs/governance/: CRG-AUDIT-2026-04-18.adoc
fuzz/: Cargo.toml
scripts/: build-android.sh  setup.sh
