[workspace]
resolver = "2"
members = [
    "crates/lsm",
    "crates/esn",
    "crates/bridge",
    "crates/sensors",
    "crates/llm",
    "crates/claude-client",
    "crates/neurophone-core",
    "crates/neurophone-android",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan D.A. Jewell <hyperpolymath@protonmail.com>"]
repository = "https://github.com/hyperpolymath/neurophone"

[workspace.dependencies]
# Core neural network
ndarray = { version = "0.17", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client (for Claude API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Android JNI
jni = "0.21"

# Configuration
config = "0.14"
toml = "0.8"

# Testing
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-android]
inherits = "release"
opt-level = "s"
lto = "thin"
