[package]
name = "bridge"
description = "Bridge - State Encoding Between Neural Components and LLM"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
