[package]
name = "esn"
description = "Echo State Network - Reservoir Computing"
version.workspace = true
edition.workspace = true

[lib]
name = "esn"
path = "src/lib.rs"

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
