[package]
name = "llm"
description = "Local LLM Interface - Llama 3.2 Integration"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
