[package]
name = "lsm"
description = "Liquid State Machine - Spiking Neural Network Reservoir"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
