[package]
name = "neurophone-android"
description = "NeuroPhone Android JNI Bindings"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
neurophone-core = { path = "../neurophone-core" }
sensors = { path = "../sensors" }

jni = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"
