[package]
name = "neurophone-core"
description = "NeuroPhone Core - Main Orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
lsm = { path = "../lsm" }
esn = { path = "../esn" }
bridge = { path = "../bridge" }
sensors = { path = "../sensors" }
llm = { path = "../llm" }
claude-client = { path = "../claude-client" }

ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
