[package]
name = "sensors"
description = "Phone Sensor Processing - Temporal Feature Extraction"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
